Updated index.html code for correct linking to stylesheet

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Kai's Interactive Playground</title>
   <!-- external files (style + script) -->
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
@@ -23,7 +23,7 @@
 
       <nav id="main-nav" role="navigation" aria-label="Main">
         <ul>
-          <li><a href="#interactive">Interactive</a></li>
+          <li><a href="#interactive">Interactive Features</a></li>
           <li><a href="#form-section">Form</a></li>
           <li><a href="#faq">FAQ</a></li>
         </ul>
